[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Characters/Enemies/Drone Fighters/Templates/DroneFighterHorizontal.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/AIMovement.gd" type="Script" id=4]

[sub_resource type="Animation" id=8]
resource_name = "Hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("../ShipManager:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.45098, 0.45098, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="GruntDrone_Horizontal" instance=ExtResource( 1 )]
scale = Vector2( 1, -1 )
part_setup = {
"Frame": "Drone Frame",
"WeaponLeft": "Auto Rifle XV",
"WeaponRight": "",
"Wings": ""
}
drop_rates = {
"Currency": 70,
"Hazard": 30,
"Part": 25
}

[node name="InstantMoveSystem" parent="Modules" index="0"]
move_speeds = {
"Run": 30.0,
"Sprint": 0.0,
"Walk": 0.0
}

[node name="HealthSystem" parent="Modules" index="1"]
health_max = 3

[node name="Sprite" parent="ShipManager/Frame/Drone Frame/GameplaySprite/Outline2" index="0"]
modulate = Color( 0.215686, 0.164706, 0.164706, 1 )

[node name="Sprite" parent="ShipManager/Frame/Drone Frame/GameplaySprite/Outline" index="0"]
modulate = Color( 0.341176, 0.27451, 0.27451, 1 )

[node name="Sprite" parent="ShipManager/Frame/Drone Frame/GameplaySprite/Detail_2" index="0"]
modulate = Color( 1, 0.584314, 0.584314, 1 )

[node name="Detail_3" parent="ShipManager/Frame/Drone Frame/GameplaySprite" index="6"]
visible = false

[node name="Sprite" parent="ShipManager/Frame/Drone Frame/GameplaySprite/Detail_4" index="0"]
modulate = Color( 0.984314, 0.85098, 0.85098, 1 )

[node name="Crop Cannon" parent="ShipManager/WeaponLeft" index="0"]
visible = false
target = [ "Player", "Hazard" ]
cam_fx = "None"

[node name="Auto Rifle XV" parent="ShipManager/WeaponLeft" index="1"]
visible = true
position = Vector2( 0, 0 )
z_index = 0
target = [ "Player", "Hazard" ]
cam_fx = "None"

[node name="Rocket Launcher Mk1" parent="ShipManager/WeaponLeft" index="2"]
target = [ "Player", "Hazard" ]
cam_fx = "None"

[node name="Anim" parent="DeathExplosion" index="1"]
anims/Hurt = SubResource( 8 )

[node name="Movement" parent="." index="8"]
script = ExtResource( 4 )
move_speed = 40.0
switch_dir_time_max = 3.0

[connection signal="timeout" from="Movement/SwitchDirectionTimer" to="Movement" method="switch_direction"]

[editable path="Modules/HealthSystem"]
[editable path="ShipManager"]
[editable path="ShipManager/Frame/Drone Frame"]
