[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/TimerRandomizer.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Characters/Enemies/EnemyShipController.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/DroneFighter.gd" type="Script" id=3]
[ext_resource path="res://Scripts/AIMovement.gd" type="Script" id=4]
[ext_resource path="res://CharacterPuppets/Scenes/2D/Modules/LookAt.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25.1307, 22.6176 )

[node name="DroneFighter" instance=ExtResource( 2 )]
scale = Vector2( 0.994799, 0.994799 )
script = ExtResource( 3 )
parts_equipped = {
"Frame": "",
"WeaponLeft": "",
"WeaponRight": "",
"Wings": ""
}
part_drops = [ "Jet Frame", "Supersonic Frame", "Star Frame" ]
drop_rates = {
"Currency": 1,
"Hazard": 1,
"Part": 100
}
random_rotate = false

[node name="InstantMoveSystem" parent="Modules" index="0"]
move_speeds = {
"Run": 50.0,
"Sprint": 0.0,
"Walk": 0.0
}

[node name="HealthSystem" parent="Modules" index="1"]
health_max = 2

[node name="AreaCollider" parent="Modules/HealthSystem/Hitbox" index="0"]
position = Vector2( -1.00523, 1.50784 )
shape = SubResource( 1 )

[node name="LookAt" parent="Modules" index="2" instance=ExtResource( 5 )]

[node name="Crop Frame" parent="ShipManager/Frame" index="0"]
visible = false

[node name="WeaponLeft" parent="ShipManager" index="2"]
position = Vector2( 0, -9.5 )
z_index = -2

[node name="Auto Rifle XV" parent="ShipManager/WeaponLeft" index="1"]
visible = true

[node name="Combat" type="Node" parent="." index="7"]

[node name="ShootTimer" type="Timer" parent="Combat" index="0"]
script = ExtResource( 1 )
min_time = 1.0
max_time = 2.0

[node name="Movement" type="Node" parent="." index="8"]
script = ExtResource( 4 )

[node name="SwitchDirectionTimer" type="Timer" parent="Movement" index="0"]

[node name="RandomRotateTimer" type="Timer" parent="Movement" index="1"]
wait_time = 5.0
one_shot = true

[node name="RotateTween" type="Tween" parent="." index="12"]

[connection signal="Dead" from="." to="Combat/ShootTimer" method="stop"]
[connection signal="Dead" from="." to="Movement/SwitchDirectionTimer" method="stop"]
[connection signal="enemy_activated" from="." to="Combat/ShootTimer" method="start_up"]
[connection signal="enemy_activated" from="." to="Movement" method="start_up"]
[connection signal="Dead" from="Modules/HealthSystem" to="." method="set_state" binds= [ "Dead" ]]
[connection signal="Knockback" from="Modules/HealthSystem" to="Combat/ShootTimer" method="stop"]
[connection signal="Knockback" from="Modules/HealthSystem" to="Movement/SwitchDirectionTimer" method="stop"]
[connection signal="KnockbackEnded" from="Modules/HealthSystem" to="Combat/ShootTimer" method="start"]
[connection signal="KnockbackEnded" from="Modules/HealthSystem" to="Movement/SwitchDirectionTimer" method="start"]
[connection signal="timeout" from="Combat/ShootTimer" to="." method="shoot" binds= [ "Left" ]]
[connection signal="timeout" from="Movement/RandomRotateTimer" to="." method="random_rotate"]

[editable path="Modules/HealthSystem"]
[editable path="ShipManager"]
